--- a/index.html
+++ b/index.html
@@ -1,12 +1,100 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My GitHub Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Anahita Souham | Portfolio</title>
+  <style>
+    body {
+      font-family: "Helvetica Neue", Arial, sans-serif;
+      background-color: #f8f9fa;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      background-color: #ffffff;
+      padding: 60px 20px 30px 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    h1 {
+      font-size: 2.2em;
+      margin-bottom: 10px;
+    }
+    p.subtitle {
+      color: #555;
+      font-size: 1.1em;
+    }
+    section {
+      max-width: 700px;
+      margin: 40px auto;
+      padding: 0 20px;
+      text-align: left;
+    }
+    h2 {
+      color: #0077b6;
+      border-bottom: 2px solid #eaeaea;
+      padding-bottom: 5px;
+    }
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+    ul li {
+      margin-bottom: 8px;
+    }
+    footer {
+      font-size: 0.9em;
+      color: #777;
+      margin: 40px 0;
+    }
+    a {
+      color: #0077b6;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello from GitHub Pages!</h1>
-  <p>If you see this, deployment worked.</p>
+  <header>
+    <h1>Anahita Souham</h1>
+    <p class="subtitle">Data-Driven Creative | Finance & Fashion Enthusiast</p>
+  </header>
+
+  <section>
+    <h2>About Me</h2>
+    <p>
+      I’m a MORSE graduate from the University of Warwick, passionate about 
+      the intersection of data, finance, and creativity. I’ve interned at TD Securities 
+      and CIEL Group Corp, developing financial models and market analyses for 
+      investment opportunities.
+    </p>
+  </section>
+
+  <section>
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Financial Modelling (Excel & VBA):</strong> Built automated models to support investment decisions.</li>
+      <li><strong>Fashion Retail Dashboard:</strong> Analysed retail data to identify growth opportunities.</li>
+      <li><strong>TEDxWarwick Digital Campaign:</strong> Led a 50-member team and increased engagement by 600+ followers.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Contact</h2>
+    <p>
+      📍 Paris, France<br>
+      🌐 <a href="https://www.linkedin.com/in/anahitasouham" target="_blank">LinkedIn</a>  
+      | 💌 <a href="mailto:anahitasouham@gmail.com">Email</a>
+    </p>
+  </section>
+
+  <footer>
+    © 2025 Anahita Souham
+  </footer>
 </body>
 </html>
+
